--- a/_posts/css相关内容/2019-07-14-显示省略号.md
+++ b/_posts/css相关内容/2019-07-14-显示省略号.md
@@ -8,13 +8,23 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 
 
 # 显示省略号
+
+常见错误：
+
+1、多行中，不是 direction 是 orient
+
+```js
+ -webkit-box-direction: vertical; ❌ // 『 -webkit-box-orient: vertical;』
+```
+
+
 
 - 一行文本（三个属性缺一不可）：
 
