--- a/_posts/工程化/2020-03-17-模块化.md
+++ b/_posts/工程化/2020-03-17-模块化.md
@@ -8,11 +8,22 @@ header-img:
 catalog: true
 tags:
     - < webpack >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 # 模块化
+
+常见错误点：
+
+1、对 AMD+CMD执行顺序的表述
+
+```js
+AMD：❌ // 少写了 ：加载模块后直接执行，无法保证执行顺序
+CMD：❌ // 少写了 ：加载后，直到调用才按需执行
+```
+
+
 
 本文主要关注点：`AMD/CMD` 差异；`CommonJS/ES6模块化` 差异；4种模块化规范的进步，解决的问题
 
