--- a/_posts/工程化/2022-08-24-包管理工具.md
+++ b/_posts/工程化/2022-08-24-包管理工具.md
@@ -8,13 +8,19 @@ header-img:
 catalog: true
 tags:
     - < 工程化 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 
 
 # 包管理工具
+
+常见错误：
+
+1、pnpm 的lock 文件是 pnpm-lock.yml，  ❌ 不是pnpm.yml
+
+
 
 参考文章：[JavaScript package managers compared: npm, Yarn, or pnpm?](https://blog.logrocket.com/javascript-package-managers-compared/)
 
