--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -8,11 +8,17 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 # 数组去重（算法整理）
+
+常见错误点：
+
+1、注意 Set：Set 转换数组为 Set 类型，需要再使用扩展运算符/Array.from转换为数组
+
+
 
 总结：
 
