LTN：12.25 - 错题重做 31题

--- a/_posts/vue相关内容/2019-07-12-vue相关 面试问题.md
+++ b/_posts/vue相关内容/2019-07-12-vue相关 面试问题.md
@@ -50,7 +50,7 @@ created和mounted之间的区别：
 
    注意：在传值的时候，如果父组件在mounted传给子组件值，子组件是没有办法在created里面使用的
 
-   father-beforeCreated --> father-created --> son-beforeCreated -->son-created --> son-mounted -->**father-mounted(这是最后一个)**
+   father-beforeCreated --> father-created -->【father-beforemount】 --> son-beforeCreated -->son-created --> son-beformount --> son-mounted -->**father-mounted(这是最后一个)**
 
    father-beforeDestroy --> son-beforeDestroy --> son-destroyed --> father-destroyed
 
@@ -388,47 +388,6 @@ var vm=new Vue({
 4、 如果一个值依赖多个属性（多对一），用`computed`肯定是更加方便的。如果一个值变化后会引起一系列操作，或者一个值变化会引起一系列值的变化（一对多），用`watch`更加方便一些。
 
 
-
-#### 11.数据请求应该添加在生命周期的哪里？
-
-​	看实际情况，一般在 created（或beforeRouter） 里面就可以，如果涉及到需要页面加载完成之后的话就用 mounted。主要的区分在于**是否需要操作DOM结构**。
-​	1.在created的时候，视图中的html并没有渲染出来，所以此时如果直接去操作html的dom节点，一定找不到相关的元素；
-​	2.而在mounted中，由于此时html已经渲染出来了，所以可以直接操作dom节点，（此时document.getelementById 即可生效了）；
-
-
-
-#### 12.vue组件中data为什么是函数
-
-是因为js本身的特性带来的，跟vue本身设计无关。类比引用数据类型：Object是引用数据类型,如果不用function 返回,每个组件的data 都是内存的同一个地址,一个数据改变了其他也改变了;
-
-```javascript
-//如果直接赋值，两个实例同时引用一个对象，那么当你修改其中一个属性的时候，另外一个实例也会跟着改
-var MyComponent = function() {}
-MyComponent.prototype.data = {
-  a: 1,
-  b: 2,
-}
-// 上面是一个虚拟的组件构造器，真实的组件构造器方法很多
-
-var component1 = new MyComponent()
-var component2 = new MyComponent()
-// 上面实例化出来两个组件实例，也就是通过<my-component>调用，创建的两个实例
-
-component1.data.a === component2.data.a // true
-component1.data.b = 5;
-component2.data.b // 5
-```
-
-```javascript
-Vue.component('my-component', {
-  template: '<div>OK</div>',
-  data() {
-    return {} // 返回一个唯一的对象，不要和其他组件共用一个对象进行返回
-  },
-})
-```
-
-data是一个函数时，每个组件实例都有自己的作用域，每个实例相互独立,不会相互影响；
 
 #### 13.vue router[路由守卫]有哪些钩子函数，哪一个是可以在全局使用的
 
