--- a/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-4 回流重绘+分层合成机制.md
@@ -57,7 +57,7 @@ typora-root-url: ..
 
 <img src="/../img/assets_2019/image-20210709115011262.png" alt="image-20210709115011262" style="zoom:25%;" />
 
-`Schedule Style Recalculation`（样式计算） -> `Recalculate Style`（样式计算） -> `Update Layer Tree`（回流/重排） -> `Paint`（重绘） -> `Composite Layers`（渲染层合并）
+`Schedule Style Recalculation`（样式计算） -> `Recalculate Style`（样式计算） -> `Update Layer Tree`（布局 - 回流/重排） -> `Paint`（重绘） -> `Composite Layers`（渲染层合并）
 
 - 1、JS 实现动画效果
 
