--- a/_posts/JS原生基础相关/2021-07-21-柯里化函数实现.md
+++ b/_posts/JS原生基础相关/2021-07-21-柯里化函数实现.md
@@ -8,13 +8,15 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN3 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 ## 柯里化函数实现
 
 柯里化是把 **接受 <u>多个参数</u> 的函数** 变换成 **接受一个 <u>单一参数</u> 的函数**，并且返回 **接受余下的参数而且返回结果的新函数** 的技术。
+
+常见错误点：让直接实现一个 add(1)(2)(3) 的函数，其实就是柯里化
 
 ```js
 // 更简洁、更现代化的方式
