LTN：1.6 - 76题 做题记录(LTN4-45m；LTN3-1h56m；LTN2-2h13m；LTN1-21h31m)

--- a/_posts/浏览器原理相关内容/2021-04-08-03 为什么很多网站第二次打开速度会很快.md
+++ b/_posts/浏览器原理相关内容/2021-04-08-03 为什么很多网站第二次打开速度会很快.md
@@ -19,7 +19,9 @@ typora-root-url: ..
 
 1、DNS缓存：在浏览器本地把对应的IP和域名关联起来
 
-2、浏览器页面资源缓存
+2、同源站点可以复用渲染进程，同时HTTP/1.1 后TCP连接都是默认长连接，节省了建立连接的时间
+
+3、浏览器页面资源缓存
 
 -   请求一次资源后，只要`Cache-Control:Max-age=2000`设置的**缓存时间还没有过期**，如果再次请求该资源，会直接返回缓存中的资源给浏览器。
 - 如果缓存过期了，浏览器会继续发起网络请求，并在请求头重携带 `If-None-Match` 判断**请求的资源没有更新**，就返回 304 状态码，<u>重新设置过期时间，继续使用缓存中的资源</u>
