LTN：1.6 21个LTN1升到2，15个停留在LTN1

--- a/_posts/2024-12-25-LTN做题.md
+++ b/_posts/2024-12-25-LTN做题.md
@@ -17,7 +17,7 @@ typora-root-url: ..
 
 2025.1.7 开始
 
-(LTN1 盒子) 2025.1.10 - ？min
+(LTN1 盒子) 2025.1.10-1.17 - 21h31min
 
 ✅作业16（2）：arguments 对象对待命名参数和设置了默认值的命名参数有什么不同？数组作为参数传入函数得到的arguments 是什么？怎么实现arguments是数组？怎么收集独立参数？在对象字面量和数组字面量中，扩展运算符有什么不同的表现？
 ✅作业25：简单写下 请求创建过程
